--- a/web.config
+++ b/web.config
@@ -7,6 +7,10 @@
                     <match url="^admin/objeto/([^/]*)/?" />
                     <action type="Rewrite" url="admin/objeto.php?tb={R:1}" />
                 </rule>
+                <rule name="Productos" stopProcessing="true">
+                    <match url="^producto/([^/]*)\.php" />
+                    <action type="Rewrite" url="producto.php?slug={R:1}" />
+                </rule>
             </rules>
         </rewrite>
     </system.webServer>
