Nuevo rewrite mode

--- a/web.config
+++ b/web.config
@@ -4,7 +4,7 @@
         <rewrite>
             <rules>
                 <rule name="Objetos" stopProcessing="true">
-                    <match url="^admin/objeto/([^/]*)/?" />
+                    <match url="^admin/objeto/([^/]*)\.php" />
                     <action type="Rewrite" url="admin/objeto.php?tb={R:1}" />
                 </rule>
                 <rule name="Productos" stopProcessing="true">
