--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 RewriteBase /
 
-RewriteRule ^admin/objeto/([^/]*)/? admin/objeto.php?tb=$1 [L,PT]
+RewriteRule ^admin/objeto/([^/]*)\.php admin/objeto.php?tb=$1 [QSA,L,PT]
 RewriteRule ^producto/([^/]*)\.php producto.php?slug=$1 [L,PT]
 
 RewriteCond %{REQUEST_URI}  !\.(css|js|php|html?|shtml|jpg|gif|png|jpeg|eot|otf|svg|ttf|woff|woff2|pdf)$
