--- a/web.config
+++ b/web.config
@@ -11,6 +11,10 @@
                     <match url="^producto/([^/]*)\.php" />
                     <action type="Rewrite" url="producto.php?slug={R:1}" />
                 </rule>
+                <rule name="Anexos" stopProcessing="true">
+                    <match url="^anexo/([^/]*)\.php" />
+                    <action type="Rewrite" url="anexo.php?slug={R:1}" />
+                </rule>
             </rules>
         </rewrite>
     </system.webServer>
